tests/golden/compile-fail/parse_bad_where_clause.rua
fn identity<T>(value: T) -> T where T: { value }
