tests/golden/compile-fail/parse_bad_where_clause.diag.golden
<golden>/compile-fail/parse_bad_where_clause.rua:1: parse error: expected identifier, found `{`